# form-data-extractor

./: README.md  pyproject.toml
app/: excel_writer.py  extractor.py  main.py  utils.py
